# academic-research-chat-agent-

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  instructions.md  pyproject.toml  streamlit_app.py
docker/: Dockerfile.backend
docs/: API.md  ARCHITECTURE.md  SETUP.md
frontend/: .gitignore  Dockerfile  package.json
scripts/: setup.sh
src/: rag_search.py  research_helper.py
src/agent/: engine.py
src/api/: main.py
src/config/: settings.py
src/knowledge_graph/: graph.py
src/memory/: manager.py
src/retrieval/: rag.py
