[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academic-research-chat-agent"
version = "0.1.0"
description = "AI Research Collaborator Agent - Intelligent research assistance platform with LLM, retrieval, memory, and knowledge graphs"
requires-python = ">=3.10"
authors = [
    {name = "Research Team", email = "ivanshab23@gmail.com"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "networkx>=3.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
